--- a/AngularJS/Reader/index.html
+++ b/AngularJS/Reader/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+      <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300,900' rel='stylesheet' type='text/css'>
     <link href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
      <!-- Include the core AngularJS library -->
@@ -9,20 +10,18 @@
     <!-- Include the AngularJS routing library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.5/angular-route.min.js"></script>
-   
-    
+
   </head>
-  <body ng-app="OutboxApp">
+  <body ng-app="ReaderApp">
     <div class="header">
       <div class="container">
-        <img src="https://codecademy4322372-8000.ccterminalcloud.com/img/logo.svg" width="140" height="150">
+        Reader
       </div>
     </div>
 
     <div class="main">
       <div class="container">
-        <div ng-view></div>
-
+        		<div ng-view></div>
       </div>
     </div>
 
@@ -30,11 +29,13 @@
     <script src="js/app.js"></script>
 
     <!-- Controllers -->
-    <script src="js/controllers/DayController.js"></script>
-    <script src="js/controllers/EventController.js"></script>
+    <script src="js/controllers/BookshelfController.js"></script>
+    <script src="js/controllers/BookController.js"></script>
+    <script src="js/controllers/ChapterController.js"></script>
 
     <!-- Services -->
-	<script src="js/services/events.js"></script>
+     <script src="js/services/books.js"></script>
 
   </body>
 </html>
+
